@@ -50,6 +50,7 @@
             <value>
               <list>
                 <string>bottom</string>
+                <string>hidden</string>
               </list>
             </value>
         </item>
@@ -62,6 +63,15 @@
                     <value>
                       <list>
                         <string>listbox</string>
+                      </list>
+                    </value>
+                </item>
+                <item>
+                    <key> <string>hidden</string> </key>
+                    <value>
+                      <list>
+                        <string>listbox_start_date_range_max</string>
+                        <string>listbox_start_date_range_min</string>
                       </list>
                     </value>
                 </item>
