@@ -7,16 +7,8 @@
     <pickle>
       <dictionary>
         <item>
-            <key> <string>delegated_list</string> </key>
-            <value>
-              <list>
-                <string>editable_columns</string>
-              </list>
-            </value>
-        </item>
-        <item>
             <key> <string>id</string> </key>
-            <value> <string>listbox</string> </value>
+            <value> <string>listbox_start_date_range_max</string> </value>
         </item>
         <item>
             <key> <string>message_values</string> </key>
@@ -72,29 +64,8 @@
             <value>
               <dictionary>
                 <item>
-                    <key> <string>all_editable_columns</string> </key>
-                    <value>
-                      <list/>
-                    </value>
-                </item>
-                <item>
-                    <key> <string>editable_columns</string> </key>
-                    <value>
-                      <list>
-                        <tuple>
-                          <string>start_date_range_min</string>
-                          <string>Valid From</string>
-                        </tuple>
-                        <tuple>
-                          <string>start_date_range_max</string>
-                          <string>Valid Until</string>
-                        </tuple>
-                      </list>
-                    </value>
-                </item>
-                <item>
                     <key> <string>field_id</string> </key>
-                    <value> <string>my_sale_supplies_listbox</string> </value>
+                    <value> <string>my_view_mode_listbox_read_only_start_date_range_max</string> </value>
                 </item>
                 <item>
                     <key> <string>form_id</string> </key>
